<resources>
    <string name="app_name">Ugo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="register_activity_label">RegisterActivity</string>
    <string name="show_user_data_activity_label">ShowUserDataActivity</string>
    <string name="login_activity_label">LoginActivity</string>

    <string name="anonymous_button_label">Anonymous</string>
    <string name="register_button_label">Register</string>
    <string name="login_button_label">Login</string>

    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="birth_date_label">Birth date</string>
    <string name="location_label">Location</string>


    <string name="mandatory_field_error">The field %1$s is mandatory</string>
    <string name="wrong_credential_error">Wrong credentials! Please try again.</string>
    <string name="confirm_button_label">Confirm</string>
    <string name="placeholder_remote_data">Remote Data</string>
    <string name="love_label">Love</string>
    <string name="health_label">Health</string>
    <string name="work_label">Work</string>
    <string name="luck_label">Luck</string>
    <string name="placeholder_local_data">Local Data</string>
    <string name="placeholder_data_question">Data question</string>
    <string name="send_button_label">Send</string>
    <string name="data_question_format">How do you feel in %1$s?</string>
    <string name="new_data_button_label">New Data</string>
    <string name="old_data_button_label">Old Data</string>
    <string name="remote_data_button_label">Remote Data</string>
    <string name="placeholder_birth_date">-</string>
    <string name="select_date_button_label">change date</string>

</resources>
