<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".FirstAccessActivity"
    android:orientation="vertical"
    >


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/register_button"
        android:text="@string/anonymous_button_label"
        android:id="@+id/anonymous_button"
        android:layout_marginBottom="@dimen/button_margin_bottom"
      />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/register_button_label"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:id="@+id/register_button"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_below="@id/register_button"
        android:text="@string/login_button_label"

        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:id="@+id/login_button"/>

</RelativeLayout>
